// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segment renders colored segment 1`] = `
<RNSVGGroup>
  <RNSVGPath
    d="M 190.71067811865476 190.71067811865476 A 100 100 0 0 0 213.35804264972018 84.16320504546997"
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4278190335}
    strokeWidth={2}
  />
  <RNSVGPath
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4278190335}
    strokeWidth={12}
  />
</RNSVGGroup>
`;

exports[`Segment renders colored segment but leaves unfilled part in empty segment color 1`] = `
<RNSVGGroup>
  <RNSVGPath
    d="M 190.71067811865476 190.71067811865476 A 100 100 0 0 0 213.35804264972018 84.16320504546997"
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4294901760}
    strokeWidth={2}
  />
  <RNSVGPath
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4278190335}
    strokeWidth={12}
  />
</RNSVGGroup>
`;

exports[`Segment renders default 1`] = `
<RNSVGGroup>
  <RNSVGPath
    d="M 190.71067811865476 190.71067811865476 A 100 100 0 0 0 213.35804264972018 84.16320504546997"
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4294901760}
    strokeWidth={2}
  />
  <RNSVGPath
    d="M 190.71067811865476 190.71067811865476 A 100 100 0 0 0 213.35804264972018 84.16320504546997"
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4278190335}
    strokeWidth={12}
  />
</RNSVGGroup>
`;

exports[`Segment renders green as incompleteArcColor 1`] = `
<RNSVGGroup>
  <RNSVGPath
    d="M 190.71067811865476 190.71067811865476 A 100 100 0 0 0 213.35804264972018 84.16320504546997"
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4294901760}
    strokeWidth={2}
  />
  <RNSVGPath
    d="M 190.71067811865476 190.71067811865476 A 100 100 0 0 0 213.35804264972018 84.16320504546997"
    fill={null}
    propList={
      Array [
        "fill",
        "stroke",
        "strokeWidth",
      ]
    }
    stroke={4278222848}
    strokeWidth={12}
  />
</RNSVGGroup>
`;
